# serializer version: 1
# name: test_entity_description_as_dataclass
  dict({
    'device_class': 'test',
    'entity_category': None,
    'entity_registry_enabled_default': True,
    'entity_registry_visible_default': True,
    'force_update': False,
    'has_entity_name': False,
    'icon': None,
    'key': 'blah',
    'name': <UndefinedType._singleton: 0>,
    'translation_key': None,
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_description_as_dataclass.1
  "EntityDescription(key='blah', device_class='test', entity_category=None, entity_registry_enabled_default=True, entity_registry_visible_default=True, force_update=False, icon=None, has_entity_name=False, name=<UndefinedType._singleton: 0>, translation_key=None, unit_of_measurement=None)"
# ---
# name: test_extending_entity_description
  dict({
    'device_class': None,
    'entity_category': None,
    'entity_registry_enabled_default': True,
    'entity_registry_visible_default': True,
    'extra': 'foo',
    'force_update': False,
    'has_entity_name': False,
    'icon': None,
    'key': 'blah',
    'name': 'name',
    'translation_key': None,
    'unit_of_measurement': None,
  })
# ---
# name: test_extending_entity_description.1
  "test_extending_entity_description.<locals>.FrozenEntityDescription(key='blah', device_class=None, entity_category=None, entity_registry_enabled_default=True, entity_registry_visible_default=True, force_update=False, icon=None, has_entity_name=False, name='name', translation_key=None, unit_of_measurement=None, extra='foo')"
# ---
# name: test_extending_entity_description.10
  dict({
    'device_class': None,
    'entity_category': None,
    'entity_registry_enabled_default': True,
    'entity_registry_visible_default': True,
    'force_update': False,
    'has_entity_name': False,
    'icon': None,
    'key': 'blah',
    'name': 'name',
    'translation_key': None,
    'unit_of_measurement': None,
  })
# ---
# name: test_extending_entity_description.11
  "test_extending_entity_description.<locals>.CustomInitEntityDescription(key='blah', device_class=None, entity_category=None, entity_registry_enabled_default=True, entity_registry_visible_default=True, force_update=False, icon=None, has_entity_name=False, name='name', translation_key=None, unit_of_measurement=None)"
# ---
# name: test_extending_entity_description.2
  dict({
    'device_class': None,
    'entity_category': None,
    'entity_registry_enabled_default': True,
    'entity_registry_visible_default': True,
    'extra': 'foo',
    'force_update': False,
    'has_entity_name': False,
    'icon': None,
    'key': 'blah',
    'name': 'name',
    'translation_key': None,
    'unit_of_measurement': None,
  })
# ---
# name: test_extending_entity_description.3
  "test_extending_entity_description.<locals>.ThawedEntityDescription(key='blah', device_class=None, entity_category=None, entity_registry_enabled_default=True, entity_registry_visible_default=True, force_update=False, icon=None, has_entity_name=False, name='name', translation_key=None, unit_of_measurement=None, extra='foo')"
# ---
# name: test_extending_entity_description.4
  dict({
    'device_class': None,
    'entity_category': None,
    'entity_registry_enabled_default': True,
    'entity_registry_visible_default': True,
    'extension': 'ext',
    'extra': 'foo',
    'force_update': False,
    'has_entity_name': False,
    'icon': None,
    'key': 'blah',
    'name': 'name',
    'translation_key': None,
    'unit_of_measurement': None,
  })
# ---
# name: test_extending_entity_description.5
  "test_extending_entity_description.<locals>.MyExtendedEntityDescription(key='blah', device_class=None, entity_category=None, entity_registry_enabled_default=True, entity_registry_visible_default=True, force_update=False, icon=None, has_entity_name=False, name='name', translation_key=None, unit_of_measurement=None, extension='ext', extra='foo')"
# ---
# name: test_extending_entity_description.6
  dict({
    'device_class': None,
    'entity_category': None,
    'entity_registry_enabled_default': True,
    'entity_registry_visible_default': True,
    'extra': 'foo',
    'force_update': False,
    'has_entity_name': False,
    'icon': None,
    'key': 'blah',
    'mixin': 'mixin',
    'name': 'name',
    'translation_key': None,
    'unit_of_measurement': None,
  })
# ---
# name: test_extending_entity_description.7
  "test_extending_entity_description.<locals>.ComplexEntityDescription1(mixin='mixin', key='blah', device_class=None, entity_category=None, entity_registry_enabled_default=True, entity_registry_visible_default=True, force_update=False, icon=None, has_entity_name=False, name='name', translation_key=None, unit_of_measurement=None, extra='foo')"
# ---
# name: test_extending_entity_description.8
  dict({
    'device_class': None,
    'entity_category': None,
    'entity_registry_enabled_default': True,
    'entity_registry_visible_default': True,
    'extra': 'foo',
    'force_update': False,
    'has_entity_name': False,
    'icon': None,
    'key': 'blah',
    'mixin': 'mixin',
    'name': 'name',
    'translation_key': None,
    'unit_of_measurement': None,
  })
# ---
# name: test_extending_entity_description.9
  "test_extending_entity_description.<locals>.ComplexEntityDescription2(mixin='mixin', key='blah', device_class=None, entity_category=None, entity_registry_enabled_default=True, entity_registry_visible_default=True, force_update=False, icon=None, has_entity_name=False, name='name', translation_key=None, unit_of_measurement=None, extra='foo')"
# ---
